@@ -229,14 +229,13 @@ class FilesystemNode
     /**
      * Read data (binary format) into the given buffer.
      *
-     * @param buffer  The buffer to containing the data
-     *                This will be allocated by the method, and must be
-     *                freed by the caller.
+     * @param buffer  The buffer to contain the data.
+     *
      * @return  The number of bytes read (0 in the case of failure)
      *          This method can throw exceptions, and should be used inside
      *          a try-catch block.
      */
-    virtual uInt32 read(uInt8*& buffer) const;
+    virtual uInt32 read(BytePtr& buffer) const;
 
     /**
      * The following methods are almost exactly the same as the various
@@ -380,7 +379,7 @@ class AbstractFSNode
      *          This method can throw exceptions, and should be used inside
      *          a try-catch block.
      */
-    virtual uInt32 read(uInt8*& buffer) const { return 0; }
+    virtual uInt32 read(BytePtr& buffer) const { return 0; }
 
     /**
      * The parent node of this directory.
